[가계부] 카테고리 객체 내려줄수 있도록 수정, openapi yaml 수정
